# ai-changelog-insights

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  README.md  feed.xml  index.html  meta.json  pyproject.toml  style.css
.github/workflows/: daily-update.yml
archives/: 2026-02-26.html  2026-02-27.html
scripts/: run_daily.ps1
site/: feed.xml  index.html  rss_template.xml  style.css  template.html
site/archives/: 2026-02-25.html  2026-02-26.html
src/: config.py  github_client.py  main.py  summarizer.py
tests/: test_flow.py  test_github_client.py  test_main.py  test_summarizer.py
